# bellwether-ai

./: API_Contract.md  Backend_Trace.md  Bellwether_PRD.md  Bellwether_TRD.md  CLAUDE.md  README.md  render.yaml
apps/api/: .env.example  .gitignore  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: __init__.py  brief.py  companies.py  discover.py  health.py  watchlist.py
apps/api/app/clients/: __init__.py  crustdata.py  llm.py
apps/api/app/core/: __init__.py  config.py  db.py  errors.py
apps/api/app/providers/: __init__.py  live_provider.py  mock_provider.py  provider_resolver.py
apps/api/app/repositories/: __init__.py  storage.py
apps/api/app/schemas/: __init__.py  brief.py  common.py  discover.py  watchlist.py
apps/api/app/services/: __init__.py  alert_engine.py  bootstrap_service.py  brief_service.py  clock.py  crustdata_fields.py  discover_service.py  llm_analysis_service.py  query_parser.py  refresh_service.py  sample_data.py  watchlist_service.py
apps/api/bellwether_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: next.config.mjs  package-lock.json  package.json
apps/web/app/: layout.tsx
apps/web/app/brief/: page.tsx
apps/web/app/discover/: page.tsx
apps/web/app/watchlist/: page.tsx
apps/web/components/brief/: AlertCard.tsx  AlertList.tsx  AlertTypeBadge.tsx  BriefSummary.tsx  CohortBadge.tsx  ReasoningTrace.tsx  SeverityBadge.tsx  TriggerButton.tsx
apps/web/components/common/: Button.tsx  EmptyState.tsx  ErrorToast.tsx  LoadingState.tsx
apps/web/lib/: api.ts  types.ts
(+9 files in other folders)
